--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -8,13 +8,13 @@
 		<version>2.7.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.Portfolio</groupId>
+	<groupId>com.portfolio</groupId>
 	<artifactId>mgb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mgb</name>
-	<description>Portfolio de MGB</description>
+	<description>portfolio MGB</description>
 	<properties>
-		<java.version>18</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,6 +39,11 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
