se creo el modulo de security en el back, con sus clases y entidades, no se puede levantar el servidor por error de beans no encontrado entre los paquetes UserService e InterUserRepository

--- a/Back-End/src/main/java/com/portfolio/resources/application.properties
+++ b/Back-End/src/main/java/com/portfolio/resources/application.properties
@@ -1,5 +1,12 @@
+#jpa
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#datasources
 spring.datasource.url=jdbc:mysql://localhost:3306/backendmgb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#jwt
+jwt.secret = secret
+jwt.expiration = 5000
+
+loggin.level.root=WARN
