--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-#jpa
+#jpa 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#datasources
+#datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/backendmgb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-#jwt
+#JWT
 jwt.secret = secret
 jwt.expiration = 5000
-
-loggin.level.root=WARN
